tests/it/snapshots/it__duration__parse_artifact_max_age_below_min.snap
---
source: tests/it/duration.rs
expression: "ArtifactMaxAge::try_from(input).expect_err(\"must have failed to parse\")"
info: 1ms
---
validate retention age
├╴at {source location}
├╴context: provided value: 1ms
│
╰─▶ retention value is too small
    ├╴at {source location}
    ╰╴help: must be at least 1s
