tests/it/snapshots/it__duration__parse_artifact_max_age_empty.snap
---
source: tests/it/duration.rs
expression: "ArtifactMaxAge::try_from(input).expect_err(\"must have failed to parse\")"
info: ""
---
validate retention age
├╴at {source location}
├╴context: provided value: 
│
├─▶ parse duration
│   ╰╴at {source location}
│
╰─▶ value was empty
    ╰╴at {source location}
